# security-asset-correlator

./: .gitignore  CONTRIBUTING.md  README.md  canonical_mapping.yaml  design_considerations.md  docker-compose.yml  engine.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new_loader.yml
.github/workflows/: ci.yml  publish.yml
config/: source_mappings.yaml
data/samples/: aws_sample.json  edr_sample.json  multi_source_sample.json  qualys_sample.json  tenable_sample.json
docs/: design_considerations.md  edge_cases.md
src/api/: main.py
src/api/routes/: assets.py  coverage.py  metrics.py  vulnerabilities.py
src/config/: canonical_mapping.yaml  match_thresholds.yaml  source_confidence.yaml  source_mappings.yaml
src/correlator/: conflict_resolver.py  engine.py  matcher.py  merger.py  models.py  risk_scorer.py
src/loaders/: aws_loader.py  base_loader.py  edr_loader.py  generic_loader.py  qualys_loader.py  tenable_loader.py
src/resolvers/: hostname_resolver.py  ip_resolver.py  metadata_resolver.py
src/store/: __init__.py  base.py  memory.py  sql.py
tests/: test_conflict_resolver.py  test_matcher.py  test_merger.py
