[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-asset-correlator"
version = "1.0.0"
description = "Cross-tool canonical asset correlation engine for security operations"
readme = "README.md"
license = "MIT"
authors = [{ name = "Apurv Tyagi", email = "tyagiapurv@gmail.com" }]
requires-python = ">=3.11"
keywords = ["security", "asset", "correlation", "vulnerability", "cmdb", "edr", "aws"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pyyaml>=6.0",
  "python-dateutil>=2.9.0",
  "sqlalchemy>=2.0.0",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.8.0",
  "mypy>=1.13",
]
postgres = [
  "psycopg2-binary>=2.9",
]

[project.scripts]
correlate = "src.correlator.engine:main"

[project.urls]
Homepage = "https://github.com/apurvtyagi/security-asset-correlator"
Issues = "https://github.com/apurvtyagi/security-asset-correlator/issues"
Documentation = "https://github.com/apurvtyagi/security-asset-correlator/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.config" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
